--- a/pokemones/src/components/Nevbar.css
+++ b/pokemones/src/components/Nevbar.css
@@ -1,5 +1,9 @@
-#sidebar a.active {
-    color: black;
-    text-decoration: underline;
-  }
+
+
+  .custom{
+
+    color: red;
+    text-decoration: none;
+}
+
   
