--- a/pokemones/src/index.css
+++ b/pokemones/src/index.css
@@ -3,3 +3,10 @@
     color: red;
 }
 
+.home{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
